# ChangeLog for net-analyzer/cacti
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/ChangeLog,v 1.122 2008/02/05 10:53:12 corsair Exp $

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> cacti-0.8.7a.ebuild:
  Stable on ppc64

  22 Jan 2008; Brent Baude <ranger@gentoo.org> cacti-0.8.6j-r7.ebuild:
  Marking cacti-0.8.6j-r7 ppc to make a happy tree

*cacti-0.8.7a-r1 (22 Jan 2008)

  22 Jan 2008; <pva@gentoo.org> -cacti-0.8.6j-r6.ebuild,
  -cacti-0.8.7-r1.ebuild, +cacti-0.8.7a-r1.ebuild:
  Added upstream fixes. Removed unused ebuilds.

  21 Jan 2008; Jeroen Roovers <jer@gentoo.org> cacti-0.8.7a.ebuild:
  Stable for HPPA (bug #206921).

  23 Nov 2007; Markus Rothe <corsair@gentoo.org> cacti-0.8.6j-r7.ebuild:
  Stable on ppc64; bug #199509

  22 Nov 2007; Raúl Porcel <armin76@gentoo.org> cacti-0.8.6j-r7.ebuild:
  alpha/sparc stable wrt security #199509

  22 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  cacti-0.8.6j-r7.ebuild:
  stable x86, security bug 199509

  21 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  cacti-0.8.6j-r7.ebuild:
  Stable on amd64 wrt bug #199509.

*cacti-0.8.7a (18 Nov 2007)
*cacti-0.8.6j-r7 (18 Nov 2007)

  18 Nov 2007; <pva@gentoo.org> +cacti-0.8.6j-r7.ebuild,
  -cacti-0.8.7.ebuild, +cacti-0.8.7a.ebuild:
  New release 0.8.7a and new patch 0.8.6j-r7. Fixes possible Possible SQL
  injection issue was resolved, bug #199509.

*cacti-0.8.7-r1 (03 Nov 2007)

  03 Nov 2007; <pva@gentoo.org> cacti-0.8.6j-r6.ebuild,
  +cacti-0.8.7-r1.ebuild:
  Added patches from upstream, fix bug #194166, small changes in 0.8.6j-r6 to
  shut up repoman.

*cacti-0.8.7 (29 Oct 2007)

  29 Oct 2007; Markus Ullmann <jokey@gentoo.org> metadata.xml,
  +cacti-0.8.7.ebuild:
  Version bump with a bunch of fixes, check upstream changelog for details

  19 Jul 2007; Christoph Mende <angelos@gentoo.org> cacti-0.8.6j-r6.ebuild:
  Stable on amd64 wrt bug #172378
