@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/Attic/cacti-0.8.7a-r1.ebuild,v 1.1 2008/01/22 16:28:14 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/cacti/Attic/cacti-0.8.7a-r2.ebuild,v 1.1 2008/02/13 13:00:08 pva Exp $
 
 inherit eutils webapp depend.apache depend.php
 
@@ -15,7 +15,8 @@ SRC_URI="http://www.cacti.net/downloads/${MY_P}.tar.gz"
 # patches
 if [ "${HAS_PATCHES}" == "1" ] ; then
 	UPSTREAM_PATCHES="graph-issue-wrra-specs
-					cmd-php-non-unique-hosts"
+					cmd-php-non-unique-hosts
+					multiple_vulnerabilities-0.8.7a"
 	for i in $UPSTREAM_PATCHES ; do
 		SRC_URI="${SRC_URI} http://www.cacti.net/downloads/patches/${PV/_p*}/${i}.patch"
 	done
