@@ -2,6 +2,10 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 	<herd>netmon</herd>
+	<maintainer>
+		<email>pva@gentoo.org</email>
+		<name>Peter Volkov</name>
+	</maintainer>
 	<longdescription lang="en">
 		Cacti is a complete network graphing solution designed to harness the
 		power of RRDTool's data storage and graphing functionality. Cacti
